--- a/pcgf/smiliecreator/styles/all/template/smilie_creator.html
+++ b/pcgf/smiliecreator/styles/all/template/smilie_creator.html
@@ -19,31 +19,36 @@
                 </tr>
                 <tr>
                     <td class="bg1">
+                        <strong>{L_PCGF_SMILIECREATOR_STYLE}{L_COLON}</strong>
+                    </td>
+                    <td class="bg2">
+                        <select id="pcgf-smiliecreator-style" name="style">
+                            <option value="shield">{L_PCGF_SMILIECREATOR_STYLE_SHIELD}</option>
+                            <option value="bubble">{L_PCGF_SMILIECREATOR_STYLE_BUBBLE}</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="bg1">
                         <strong>{L_PCGF_SMILIECREATOR_FONT_COLOR}{L_COLON}</strong>
                     </td>
                     <td class="bg2">
-                        <table>
-                            <tr>
-                                <td>
-                                    <select id="pcgf-smiliecreator-color" name="color">
-                                        <option style="color: #8B0000; background-color: #FFFFFF" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
-                                        <option style="color: #FF0000; background-color: #FFFFFF" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
-                                        <option style="color: #FFA500; background-color: #FFFFFF" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
-                                        <option style="color: #A52A2A; background-color: #FFFFFF" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
-                                        <option style="color: #FFFF00; background-color: #FFFFFF" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
-                                        <option style="color: #008000; background-color: #FFFFFF" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
-                                        <option style="color: #808000; background-color: #FFFFFF" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
-                                        <option style="color: #00FFFF; background-color: #FFFFFF" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
-                                        <option style="color: #0000FF; background-color: #FFFFFF" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
-                                        <option style="color: #00008B; background-color: #FFFFFF" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
-                                        <option style="color: #4B0082; background-color: #FFFFFF" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
-                                        <option style="color: #EE82EE; background-color: #FFFFFF" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
-                                        <option style="color: #FFFFFF; background-color: #000000" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
-                                        <option style="color: #000000; background-color: #FFFFFF" value="000000" selected>{L_PCGF_SMILIECREATOR_COLOR_BLACK}</option>
-                                    </select>
-                                </td>
-                            </tr>
-                        </table>
+                        <select id="pcgf-smiliecreator-color" name="color">
+                            <option style="color: #8B0000; background-color: #FFFFFF" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
+                            <option style="color: #FF0000; background-color: #FFFFFF" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
+                            <option style="color: #FFA500; background-color: #FFFFFF" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
+                            <option style="color: #A52A2A; background-color: #FFFFFF" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
+                            <option style="color: #FFFF00; background-color: #FFFFFF" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
+                            <option style="color: #008000; background-color: #FFFFFF" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
+                            <option style="color: #808000; background-color: #FFFFFF" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
+                            <option style="color: #00FFFF; background-color: #FFFFFF" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
+                            <option style="color: #0000FF; background-color: #FFFFFF" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
+                            <option style="color: #00008B; background-color: #FFFFFF" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
+                            <option style="color: #4B0082; background-color: #FFFFFF" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
+                            <option style="color: #EE82EE; background-color: #FFFFFF" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
+                            <option style="color: #FFFFFF; background-color: #000000" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
+                            <option style="color: #000000; background-color: #FFFFFF" value="000000" selected>{L_PCGF_SMILIECREATOR_COLOR_BLACK}</option>
+                        </select>
                     </td>
                 </tr>
                 <tr>
@@ -51,29 +56,23 @@
                         <strong>{L_PCGF_SMILIECREATOR_SHADOW_COLOR}{L_COLON}</strong>
                     </td>
                     <td class="bg2">
-                        <table>
-                            <tr>
-                                <td>
-                                    <select id="pcgf-smiliecreator-shadow-color" name="shadowcolor">
-                                        <option style="color: #8B0000; background-color: #FFFFFF" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
-                                        <option style="color: #FF0000; background-color: #FFFFFF" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
-                                        <option style="color: #FFA500; background-color: #FFFFFF" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
-                                        <option style="color: #A52A2A; background-color: #FFFFFF" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
-                                        <option style="color: #FFFF00; background-color: #FFFFFF" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
-                                        <option style="color: #008000; background-color: #FFFFFF" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
-                                        <option style="color: #808000; background-color: #FFFFFF" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
-                                        <option style="color: #00FFFF; background-color: #FFFFFF" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
-                                        <option style="color: #0000FF; background-color: #FFFFFF" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
-                                        <option style="color: #00008B; background-color: #FFFFFF" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
-                                        <option style="color: #4B0082; background-color: #FFFFFF" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
-                                        <option style="color: #EE82EE; background-color: #FFFFFF" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
-                                        <option style="color: #FFFFFF; background-color: #000000" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
-                                        <option style="color: #000000; background-color: #FFFFFF" value="000000">{L_PCGF_SMILIECREATOR_COLOR_BLACK}</option>
-                                        <option style="color: #000000; background-color: #FFFFFF" value="-" selected>{L_PCGF_SMILIECREATOR_COLOR_NONE}</option>
-                                    </select>
-                                </td>
-                            </tr>
-                        </table>
+                        <select id="pcgf-smiliecreator-shadow-color" name="shadowcolor">
+                            <option style="color: #8B0000; background-color: #FFFFFF" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
+                            <option style="color: #FF0000; background-color: #FFFFFF" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
+                            <option style="color: #FFA500; background-color: #FFFFFF" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
+                            <option style="color: #A52A2A; background-color: #FFFFFF" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
+                            <option style="color: #FFFF00; background-color: #FFFFFF" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
+                            <option style="color: #008000; background-color: #FFFFFF" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
+                            <option style="color: #808000; background-color: #FFFFFF" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
+                            <option style="color: #00FFFF; background-color: #FFFFFF" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
+                            <option style="color: #0000FF; background-color: #FFFFFF" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
+                            <option style="color: #00008B; background-color: #FFFFFF" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
+                            <option style="color: #4B0082; background-color: #FFFFFF" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
+                            <option style="color: #EE82EE; background-color: #FFFFFF" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
+                            <option style="color: #FFFFFF; background-color: #000000" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
+                            <option style="color: #000000; background-color: #FFFFFF" value="000000">{L_PCGF_SMILIECREATOR_COLOR_BLACK}</option>
+                            <option style="color: #000000; background-color: #FFFFFF" value="-" selected>{L_PCGF_SMILIECREATOR_COLOR_NONE}</option>
+                        </select>
                     </td>
                 </tr>
                 <tr>
@@ -81,14 +80,8 @@
                         <strong>{L_PCGF_SMILIECREATOR_SHIELD_SHADOW}{L_COLON}</strong>
                     </td>
                     <td class="bg2">
-                        <table>
-                            <tr>
-                                <td>
-                                    <input id="pcgf-smiliecreator-shield-shadow" type="checkbox" name="shield-shadow"/>
-                                    <label for="pcgf-smiliecreator-shield-shadow">{L_PCGF_SMILIECREATOR_SHIELD_SHADOW_ON}</label>
-                                </td>
-                            </tr>
-                        </table>
+                        <input id="pcgf-smiliecreator-shield-shadow" type="checkbox" name="shield-shadow"/>
+                        <label for="pcgf-smiliecreator-shield-shadow">{L_PCGF_SMILIECREATOR_SHIELD_SHADOW_ON}</label>
                     </td>
                 </tr>
                 <tr>
@@ -126,7 +119,7 @@
                         <strong>{L_PCGF_SMILIECREATOR_PREVIEW}{L_COLON}</strong>
                     </td>
                     <td class="bg2">
-                        <img id="pcgf-smiliecreator-preview" src="" alt="{L_PCGF_SMILIECREATOR_PREVIEW}"></img>
+                        <img id="pcgf-smiliecreator-preview" src="" alt="{L_PCGF_SMILIECREATOR_PREVIEW}"/>
                     </td>
                 </tr>
                 <tr>
