--- a/pcgf/smiliecreator/styles/all/template/smilie_creator.html
+++ b/pcgf/smiliecreator/styles/all/template/smilie_creator.html
@@ -1,3 +1,4 @@
+<!-- INCLUDECSS @pcgf_smiliecreator/common.css -->
 <!-- INCLUDECSS @pcgf_smiliecreator/smiliecreator.css -->
 <!-- INCLUDEJS @pcgf_smiliecreator/javascript/smiliecreator.js -->
 <!-- INCLUDE simple_header.html -->
@@ -5,7 +6,7 @@
     var pcgfGetShieldLink = '{PCGF_SMILIECREATOR_GET_SHIELD_LINK}';
 </script>
 <div class="panel">
-    <div class="inner"><span class="corners-top"><span></span></span>
+    <div class="inner">
         <h3>{L_PCGF_SMILIECREATOR}</h3>
         <form action="" id="shield-creator">
             <table cellpadding="4" cellspacing="1">
@@ -34,20 +35,20 @@
                     </td>
                     <td class="bg2">
                         <select id="pcgf-smiliecreator-color" name="color">
-                            <option style="color: #8B0000; background-color: #FFFFFF" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
-                            <option style="color: #FF0000; background-color: #FFFFFF" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
-                            <option style="color: #FFA500; background-color: #FFFFFF" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
-                            <option style="color: #A52A2A; background-color: #FFFFFF" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
-                            <option style="color: #FFFF00; background-color: #FFFFFF" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
-                            <option style="color: #008000; background-color: #FFFFFF" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
-                            <option style="color: #808000; background-color: #FFFFFF" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
-                            <option style="color: #00FFFF; background-color: #FFFFFF" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
-                            <option style="color: #0000FF; background-color: #FFFFFF" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
-                            <option style="color: #00008B; background-color: #FFFFFF" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
-                            <option style="color: #4B0082; background-color: #FFFFFF" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
-                            <option style="color: #EE82EE; background-color: #FFFFFF" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
-                            <option style="color: #FFFFFF; background-color: #000000" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
-                            <option style="color: #000000; background-color: #FFFFFF" value="000000" selected>{L_PCGF_SMILIECREATOR_COLOR_BLACK}</option>
+                            <option class="pcgf-dark-red" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
+                            <option class="pcgf-red" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
+                            <option class="pcgf-orange" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
+                            <option class="pcgf-brown" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
+                            <option class="pcgf-yellow" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
+                            <option class="pcgf-green" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
+                            <option class="pcgf-olive" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
+                            <option class="pcgf-cyan" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
+                            <option class="pcgf-blue" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
+                            <option class="pcgf-dark-blue" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
+                            <option class="pcgf-indigo" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
+                            <option class="pcgf-violet" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
+                            <option class="pcgf-white" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
+                            <option class="pcgf-black" value="000000" selected>{L_PCGF_SMILIECREATOR_COLOR_BLACK}</option>
                         </select>
                     </td>
                 </tr>
@@ -57,21 +58,20 @@
                     </td>
                     <td class="bg2">
                         <select id="pcgf-smiliecreator-shadow-color" name="shadowcolor">
-                            <option style="color: #8B0000; background-color: #FFFFFF" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
-                            <option style="color: #FF0000; background-color: #FFFFFF" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
-                            <option style="color: #FFA500; background-color: #FFFFFF" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
-                            <option style="color: #A52A2A; background-color: #FFFFFF" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
-                            <option style="color: #FFFF00; background-color: #FFFFFF" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
-                            <option style="color: #008000; background-color: #FFFFFF" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
-                            <option style="color: #808000; background-color: #FFFFFF" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
-                            <option style="color: #00FFFF; background-color: #FFFFFF" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
-                            <option style="color: #0000FF; background-color: #FFFFFF" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
-                            <option style="color: #00008B; background-color: #FFFFFF" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
-                            <option style="color: #4B0082; background-color: #FFFFFF" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
-                            <option style="color: #EE82EE; background-color: #FFFFFF" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
-                            <option style="color: #FFFFFF; background-color: #000000" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
-                            <option style="color: #000000; background-color: #FFFFFF" value="000000">{L_PCGF_SMILIECREATOR_COLOR_BLACK}</option>
-                            <option style="color: #000000; background-color: #FFFFFF" value="-" selected>{L_PCGF_SMILIECREATOR_COLOR_NONE}</option>
+                            <option class="pcgf-dark-red" value="8B0000">{L_PCGF_SMILIECREATOR_COLOR_DARK_RED}</option>
+                            <option class="pcgf-red" value="FF0000">{L_PCGF_SMILIECREATOR_COLOR_RED}</option>
+                            <option class="pcgf-orange" value="FFA500">{L_PCGF_SMILIECREATOR_COLOR_ORANGE}</option>
+                            <option class="pcgf-brown" value="A52A2A">{L_PCGF_SMILIECREATOR_COLOR_BROWN}</option>
+                            <option class="pcgf-yellow" value="FFFF00">{L_PCGF_SMILIECREATOR_COLOR_YELLOW}</option>
+                            <option class="pcgf-green" value="008000">{L_PCGF_SMILIECREATOR_COLOR_GREEN}</option>
+                            <option class="pcgf-olive" value="808000">{L_PCGF_SMILIECREATOR_COLOR_OLIVE}</option>
+                            <option class="pcgf-cyan" value="00FFFF">{L_PCGF_SMILIECREATOR_COLOR_CYAN}</option>
+                            <option class="pcgf-blue" value="0000FF">{L_PCGF_SMILIECREATOR_COLOR_BLUE}</option>
+                            <option class="pcgf-dark-blue" value="00008B">{L_PCGF_SMILIECREATOR_COLOR_DARK_BLUE}</option>
+                            <option class="pcgf-indigo" value="4B0082">{L_PCGF_SMILIECREATOR_COLOR_INDIGO}</option>
+                            <option class="pcgf-violet" value="EE82EE">{L_PCGF_SMILIECREATOR_COLOR_VIOLET}</option>
+                            <option class="pcgf-white" value="FFFFFF">{L_PCGF_SMILIECREATOR_COLOR_WHITE}</option>
+                            <option class="pcgf-black" value="-" selected>{L_PCGF_SMILIECREATOR_COLOR_NONE}</option>
                         </select>
                     </td>
                 </tr>
